@@ -58,13 +58,14 @@ nosetests --with-doctest
 
 #### Descriptive statistics
 
-| Function                       | Example                                                              |
-|--------------------------------|----------------------------------------------------------------------|
-| Min                            | `min([-3, 0, 3])`                                                    |
-| Max                            | `max([1, 2, 3])`                                                     |
-| Sum                            | `sum([1, 2, 3.5])`                                                   |
-| Quantiles                      | `quantile([3, 6, 7, 8, 8, 9, 10, 13, 15, 16, 20], [0.25, 0.75])`     |
-| Product                        | `product([1.25, 2.75], [2.5, 3.40])`                                 |
+| Function  | Example                                                          |
+|-----------|------------------------------------------------------------------|
+| Min       | `min([-3, 0, 3])`                                                |
+| Max       | `max([1, 2, 3])`                                                 |
+| Sum       | `sum([1, 2, 3.5])`                                               |
+| Quantiles | `quantile([3, 6, 7, 8, 8, 9, 10, 13, 15, 16, 20], [0.25, 0.75])` |
+| Kurtosis  | `kurtosis([1, 2, 3, 4, 5])`                                      |
+| Product   | `product([1.25, 2.75], [2.5, 3.40])`                             |
 
 #### Measures of central tendency
 
