@@ -1,27 +1,28 @@
+# descriptive statistics
+from .statistics.min import min
+from .statistics.max import max
+from .statistics.sum import sum
+from .statistics.quantile import quantile
+from .statistics.kurtosis import kurtosis
+from .statistics.product import product
+
+# measures of central tendency
 from .statistics.mean import mean
 from .statistics.median import median
 from .statistics.mode import mode
-
 from .statistics.geometric_mean import geometric_mean
 
-from .statistics.min import min
-from .statistics.max import max
-
-from .statistics.sum import sum
-from .statistics.factorial import factorial
-from .statistics.choose import choose
-from .statistics.binomial import binomial
-from .statistics.normal import normal
-
-from .statistics.quantile import quantile
-
+# measures of dispersion
 from .statistics.variance import variance
 from .statistics.standard_deviation import standard_deviation
 
+# similarity
+from .statistics.correlate import correlate
 from .statistics.z_scores import z_scores
 
-from .statistics.product import product
-
-from .statistics.correlate import correlate
-
+# distributions
+from .statistics.factorial import factorial
+from .statistics.choose import choose
+from .statistics.normal import normal
+from .statistics.binomial import binomial
 from .statistics.t_test import t_test
